--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WEBNav.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WEBNav.data.gz",
-        frameworkUrl: buildUrl + "/WEBNav.framework.js.gz",
-        codeUrl: buildUrl + "/WEBNav.wasm.gz",
+        dataUrl: buildUrl + "/WEBNav.data",
+        frameworkUrl: buildUrl + "/WEBNav.framework.js",
+        codeUrl: buildUrl + "/WEBNav.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "SGK_Navigation",
