--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
               }).then((unityInstance) => {
-                //loadingBar.style.display = "none";
+                loadingBar.style.display = "none";
                 //fullscreenButton.onclick = () => {
                 //  unityInstance.SetFullscreen(1);
-                };
+                //};
               }).catch((message) => {
                 alert(message);
               });
