--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WEBNav.loader.js";
+      var loaderUrl = buildUrl + "/Meteors.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WEBNav.data",
-        frameworkUrl: buildUrl + "/WEBNav.framework.js",
-        codeUrl: buildUrl + "/WEBNav.wasm",
+        dataUrl: buildUrl + "/Meteors.data.unityweb",
+        frameworkUrl: buildUrl + "/Meteors.framework.js.unityweb",
+        codeUrl: buildUrl + "/Meteors.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "SGK_Navigation",
-        productVersion: "0.1",
+        companyName: "Kot_s_nozom",
+        productName: "MeteorTap",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
