--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
       <div id="unity-warning"> </div>
     </div>
+ </div>
     <script>
 
       var container = document.querySelector("#unity-container");
