--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | SGK_Navigation</title>
+    <title>Unity WebGL Player | ГидСГК</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -58,9 +58,9 @@
         frameworkUrl: buildUrl + "/WEBNav.framework.js",
         codeUrl: buildUrl + "/WEBNav.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "SGK_Navigation",
-        productVersion: "0.1",
+        companyName: "TheCodCat",
+        productName: "ГидСГК",
+        productVersion: "3.3.2",
         showBanner: unityShowBanner,
       };
 
