--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | SGK_Navigation</title>
+    <title>ГидСГК 3.3.2</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
-        <div id="unity-container" style = "position: absolute; width: 100%; height: 100%; left: 0%; top: 0%;">
-        <canvas id="unity-canvas" style = "position: absolute; width: 100%; height: 100%;"></canvas>
-            <div id="unity-loading-bar">
-            <div id="unity-logo"></div>
-                <div id="unity-progress-bar-empty">
-                <div id="unity-progress-bar-full"></div>
-                </div>
-            </div>
-        <div id="unity-warning"> </div>
+    <div id="unity-container" style = "position: absolute; width: 100%; height: 100%; left: 0%; top: 0%;">
+      <canvas id="unity-canvas" style = "position: absolute; width: 100%; height: 100%;"></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-warning"> </div>
     </div>
     <script>
 
@@ -58,9 +58,9 @@
         frameworkUrl: buildUrl + "/WEBNav.framework.js",
         codeUrl: buildUrl + "/WEBNav.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "SGK_Navigation",
-        productVersion: "0.1",
+        companyName: "TheCodCat",
+        productName: "ГидСГК",
+        productVersion: "3.3.2",
         showBanner: unityShowBanner,
       };
 
@@ -70,6 +70,15 @@
       // happening inside the engine, and you would instead like to size up
       // the canvas DOM size and WebGL render target sizes yourself.
       // config.matchWebGLToCanvasSize = false;
+
+      // If you would like all file writes inside Unity Application.persistentDataPath
+      // directory to automatically persist so that the contents are remembered when
+      // the user revisits the site the next time, uncomment the following line:
+      // config.autoSyncPersistentDataPath = true;
+      // This autosyncing is currently not the default behavior to avoid regressing
+      // existing user projects that might rely on the earlier manual
+      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
+      // expected to change.
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -105,7 +114,7 @@
                 loadingBar.style.display = "none";
                 //fullscreenButton.onclick = () => {
                 //  unityInstance.SetFullscreen(1);
-                // };
+                //};
               }).catch((message) => {
                 alert(message);
               });
